# ChangeLog for net-libs/gsoap
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/gsoap/ChangeLog,v 1.1 2009/03/03 06:35:29 patrick Exp $

*gsoap-2.7.12 (03 Mar 2009)
*gsoap-2.7.9f (03 Mar 2009)

  03 Mar 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +gsoap-2.7.9f.ebuild, +gsoap-2.7.12.ebuild:
  Initial Import from jokey overlay. Dep of newer virtualbox-ose. Ebuilds by
  Alessio Cassibba.
