@@ -1,6 +1,6 @@
 DIST gsoap_2.7.12.tar.gz 6537268 RMD160 18aeed686ee71b65abd6035a6dda46d5579cb972 SHA1 ea72438f751702d366fd066ce878c7f43874a07f SHA256 69a81c0c329bb8dbd8f117321879b5c38e1731cc937373953d8b66b0ea0712f6
 DIST gsoap_2.7.9f.tar.gz 4014018 RMD160 45ec36f746febf13180a8409d2de25b8db94e7bb SHA1 45d720de52b016f8e854025ea2ca853c57160755 SHA256 c2a57839cc72e355ad1cd10947ff8458703dfec4fa37a995ae41c9a822472baf
-EBUILD gsoap-2.7.12.ebuild 1167 RMD160 29a009a9c6ddd0ba3e66e08fa269298c34bc62b2 SHA1 4db94382ee29a2d5c568d7fb86790db1e5f1339a SHA256 0ea65ac92e19f472c50944fd3809c88628075ca7e93ef3a85cc5fad88c88816b
-EBUILD gsoap-2.7.9f.ebuild 992 RMD160 5cc77dada2547b1f40e40096e14178d0cc3ac731 SHA1 3177b89a31d88af8c28a6e036715b82d836c03e1 SHA256 539897e945e34a83b649d3d609f743953ce26300e87d7a283ea1aad602cbf0a8
-MISC ChangeLog 468 RMD160 64ac04f6903d5d8fc9fd5df6834d412c170d9242 SHA1 f210548970299321a4aab6d9c64cef71dc7638c9 SHA256 f0e2ea363002a816e30060b10d9cf04418b4b9a2a674c966c962f7385847f68b
+EBUILD gsoap-2.7.12.ebuild 1168 RMD160 aa9696d7caede7b18410c4059dd55bedff4ca467 SHA1 eb7a292038b821a656e872178882129b2d206edb SHA256 36cbee9fa3a8e0c3e2d7665bdb194b61c17558f14b6ab568bd61c997130eee5e
+EBUILD gsoap-2.7.9f.ebuild 993 RMD160 0a4cd0c46d67b94485e7b1886ae47959ce083745 SHA1 3e994e9ea7dfa8378f65cec10ad35d753a8ea5b8 SHA256 32d020632fdd543b1428583c8cbd0da035d12fa79c2277a791a1348be14076bf
+MISC ChangeLog 592 RMD160 36c70a1f6a5aed3a4856508ea20658db08846889 SHA1 0a4203c4d586cf5f3bbf50b6ee8ab1470f849c12 SHA256 0fa6d9012a81575745d7207eb7ab5bd45ba2ba770e4b8540204fa43513687801
 MISC metadata.xml 436 RMD160 f8388e7286f9816635a696226795260c75654259 SHA1 bf123d3c72ad78a50473289a0c1a0313d20c30b6 SHA256 06bb57fd8ea7ea748a574e014bbd1ac10f308975486fd4244ddd0b6f1cd21816
